test: wip unit testing